add color options and eraser

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 
     <div id="buttons">
-        <button id="selectColor">Color </button>
+        <button id="selectColor" class = "opener" >Color </button>
+            <input id="pickedColor"type="color" class="btn-invisible" />
         <button id = rainbowButton>Rainbow</button>
-        <button id="eraseButton">Eraser</button>
+        <button id="eraserButton">Eraser</button>
         <button id="clearButton">Clear</button>
 
 
