--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
 </head>
 <body>
 
+    <header><h1>etch a sketch</h1></header>
 
-    <div id="buttons">
-        <button id="selectColor" class = "opener" >Color </button>
-            <input id="pickedColor"type="color" class="btn-invisible" />
-        <button id = rainbowButton>Rainbow</button>
-        <button id="eraserButton">Eraser</button>
-        <button id="clearButton">Clear</button>
+   <main>
+        <div id="buttons">
+            <button  id="selectColor" class = "opener" >Color </button>
+                <input id="pickedColor"type="color" class="btn-invisible" />
+            <button id = rainbowButton>Rainbow</button>
+            <button id="eraserButton">Eraser</button>
+            <button id="clearButton">Clear</button>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="64" value=16" class="slider" id="myRange">
+              </div>
+        </div>
+
+        <div id="container">
+        </div>
+    </main>
 
 
-    </div>
+    <header> <h2>© 2024 cbsyw</h2></header>
     
 </body>
 </html>
