--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="eraserButton">Eraser</button>
             <button id="clearButton">Clear</button>
             <div class="slidecontainer">
-                <input type="range" min="1" max="64" value=16" class="slider" id="myRange">
+                <input type="range" min="1" max="64" value=16" class="slider" id="gridValue">
               </div>
         </div>
 
